--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "firebase": "^9.9.3",
     "git-commit-msg-linter": "^4.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
