--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "firebase-admin": "^11.0.1",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.8.2"
   },
@@ -22,5 +26,8 @@
     "./bin/*",
     "./lib/*"
   ],
-  "typings": "./lib/index.d.ts"
+  "typings": "./lib/index.d.ts",
+  "devDependencies": {
+    "@types/cors": "^2.8.12"
+  }
 }
