build: update tsconfig

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -28,6 +28,7 @@
 		"experimentalDecorators": true,
 		"downlevelIteration": true,
 		"declaration": true,
+		"esModuleInterop": true,
 
 		"pretty": true
 	},
