feat: add path alias

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -6,7 +6,6 @@
 		"lib": [
 			"es2015"
 		],
-
 		"rootDir": "src",
 		"outDir": "dist",
 		"baseUrl": "src",
@@ -15,7 +14,6 @@
 		"strictFunctionTypes": true,
 		"strictNullChecks": true,
 		"strictPropertyInitialization": true,
-
 		"forceConsistentCasingInFileNames": true,
 		"noImplicitAny": true,
 		"noImplicitReturns": true,
@@ -23,14 +21,17 @@
 		"noFallthroughCasesInSwitch": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
-
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"downlevelIteration": true,
 		"declaration": true,
 		"esModuleInterop": true,
-
-		"pretty": true
+		"pretty": true,
+		"paths": {
+			"@/*": [
+				"*"
+			]
+		}
 	},
 	"include": [
 		"typings/**/*",
