--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.13",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-decorators": "^1.2.1",
     "firebase-admin": "^11.0.1",
     "fs": "^0.0.1-security",
     "https": "^1.0.0",
