--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+**/*yarn-debug.log*
+**/*yarn-error.log*
+**/*firebase-debug.log*
+**/*firebase-debug.*.log*
+
+# Firebase cache
+**/*.firebase/
+
+
 # dependencies
 **/*node_modules
 /.pnp
