--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.0.1",
     "tabler-icons-react": "^1.54.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
@@ -30,7 +31,8 @@
     "start": "npx react-scripts start",
     "build": "npx react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-container": "npm run build && npx serve -s build"
   },
   "eslintConfig": {
     "extends": [
