build: share build folder into the container

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "7000:3000"
+    volumes:
+      - "./frontend/build:/app/build"
     depends_on:
       - notes-backend
 
