--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "npm run build && node ./dist/index.js",
     "lint": "tslint -c tslint.json src/**/*.ts",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "build-container": "rm -rf dist/; npm run build && node ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
