feat: create a network between the containers

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - "60:5000"
     volumes:
       - "./backend/src:/app/src"
+    networks: 
+      - application-network
 
   notes-frontend:
     container_name: frontend-notes
@@ -22,6 +24,11 @@ services:
       - "7000:3000"
     volumes:
       - "./frontend/build:/app/build"
+    networks: 
+      - application-network
     depends_on:
       - notes-backend
-
+    
+networks:
+  application-network: 
+    driver: bridge
